syntax = "proto3";

package typecheck;
option cc_enable_arenas = false;

message FunctionDefinition {
	repeated Type args = 1;
	Type returnType = 2;
	string name = 3;
	int64 id = 4; // Unique function ID
}

message RawType {
	string name = 1;
}

message Type {
	oneof kind {
		RawType raw = 1;
		typecheck.FunctionDefinition func = 2;
	}
};

message FunctionVar {
	repeated TypeVar args = 1;
	TypeVar returnVar = 2;
	string name = 3;
	int64 id = 4; // Unique function ID, must match FunctionDefinition
}

message TypeVar {
	string symbol = 1;
}
